Closed
Bug 385292
Opened 16 years ago
Closed 16 years ago
Enter (to submit form) appears to delete the selection
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta1
People
(Reporter: jruderman, Assigned: masayuki)
References
Details
(Keywords: regression)
Attachments
(2 files)
5.56 KB,
patch
|
jaas
:
review+
roc
:
superreview+
roc
:
approval1.9+
|
Details | Diff | Splinter Review |
5.56 KB,
patch
|
Details | Diff | Splinter Review |
Steps to reproduce: 1. Load http://www.google.com/ 2. Type "foobar". 3. Select "bar". 4. Press Enter. Result: "bar" disappears, leaving "foo", and the form is submitted (as foobar, luckily).
Reporter | ||
Updated•16 years ago
|
Flags: blocking1.9?
Comment 1•16 years ago
|
||
Looks like this works on Win32, Josh, could this be related to any Mac widget changes or something like that?
Assignee: nobody → joshmoz
Component: HTML: Form Submission → Widget
Component: Widget → Widget: Cocoa
Flags: blocking1.9? → blocking1.9+
QA Contact: form-submission → cocoa
Comment 2•16 years ago
|
||
Can we find a regression window?
Masayuki - it looks like we're sending the enter as a text entry command instead of bailing after gecko handles the key down or press event to submit the form. I think you'd know more about fixing this than me, can you take a look?
Assignee | ||
Updated•16 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 4•16 years ago
|
||
This patch also fixes bug 396808. The editor event listener uses keyCode of key press event for filtering. But cocoa widget is not setting it at generating the events.
Attachment #283824 -
Flags: review?(joshmoz)
Comment on attachment 283824 [details] [diff] [review] Patch rv1.0 + NS_WARNING("GetGeckoKeyCodeFromChar is failed."); You can either not have the "is" there or change it to "has". Thanks for doing this!
Attachment #283824 -
Flags: superreview?(roc)
Attachment #283824 -
Flags: review?(joshmoz)
Attachment #283824 -
Flags: review+
Attachment #283824 -
Flags: superreview?(roc)
Attachment #283824 -
Flags: superreview+
Attachment #283824 -
Flags: approval1.9+
Assignee | ||
Comment 6•16 years ago
|
||
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 7•16 years ago
|
||
Comment 8•16 years ago
|
||
This appears to have caused bug 399740.
Depends on: 399740
Comment 9•16 years ago
|
||
This has also caused bug 401425.
You need to log in
before you can comment on or make changes to this bug.
Description
•