Bug 385292 Enter (to submit form) appears to delete the selection r=josh, sr+a=roc